--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_CONNECTOR='mongodb+srv://mwhite33:n7bgnHLTYc4nlZ5P@marissa.5brwpfy.mongodb.net/piazza?retryWrites=true&w=majority&appName=Marissa'
-TOKEN_SECRET=abcde12345
+DB_CONNECTOR=''
+TOKEN_SECRET=
